# AA_Voices

./: .gitignore  LICENSE  README.md  install  pyproject.toml  requirements.txt  temp.json
VoicesDownloader/: classes.py  downloader.py
scripts/: main.py  settings.py
scripts/ai/: training.py  use.py
scripts/downloader/: __init__.py  classes.py
src/aa/: __main__.py  settings.py
src/aa/downloader/: basic_servant.py  classes.py  enums.py  exceptions.py  functions.py  servant.py
